# cloud-agent-gateway

./: Dockerfile  README.md  pyproject.toml
deploy/: __init__.py
deploy/cloud/: patch_feishu_reload.py
deploy/cloud/channel_bindings/: __init__.py  dingtalk_binding.py  wechat_binding.py
docs/: deploy-guide.md
src/cloud_agent_gateway/: __init__.py  __main__.py  binding_prompt.py  channel_binding.py  file_manager.py  oauth_proxy.py  package_source.py  platform_setup.py  reset_setup.py  setup.py  template_launch.py
src/cloud_agent_gateway/adapters/: __init__.py  nanobot_weixin.py
src/cloud_agent_gateway/deploy/: __init__.py
src/cloud_agent_gateway/deploy/cloud/: __init__.py  patch_weixin_reload.py
src/cloud_agent_gateway/deploy/cloud/channel_bindings/: dingtalk_binding.py
src/cloud_agent_gateway/mcp/: __init__.py  markitdown_server.py  marp_server.py
template/: README.md
template/hf/: README.md
template/ms/: README.md
