[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cloud-agent-gateway"
version = "0.1.1"
description = "Framework-agnostic cloud deployment layer for AI agents"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "DreamShepherd"}]
dependencies = [
    "httpx>=0.27",
    "starlette>=0.37",
    "uvicorn[standard]>=0.29",
    "websockets>=12",
    "authlib>=1.2",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "pytest-cov"]

[project.scripts]
cloud-agent-gateway = "cloud_agent_gateway.__main__:main"
cloud-gateway-setup = "cloud_agent_gateway.platform_setup:main"

[tool.setuptools.packages.find]
where = ["src"]
